--- a/index.html
+++ b/index.html
@@ -462,7 +462,49 @@
             <button class="btn-primary" onclick="closeErrorModal()">Close</button>
         </div>
     </div>
-
+<footer class="author-section">
+  <div class="author-card">
+    <div class="author-info">
+      <h3>About the Developer</h3>
+      <div class="author-details">
+        <p class="author-name">
+          <strong>Dippan Bhusal</strong>
+          <span class="author-title">Creative Frontend Developer & Tech Enthusiast</span>
+        </p>
+        <p class="author-bio">
+          Passionate about turning ideas into digital experiences. Specializing in frontend development, creative AI tools, and building weather applications.
+        </p>
+        <div class="author-links">
+          <a href="https://dippanbhusal.tech" target="_blank" rel="author noopener" aria-label="Visit Dippan's Portfolio">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+            </svg>
+            Portfolio
+          </a>
+          <a href="https://github.com/kdippan" target="_blank" rel="noopener" aria-label="Visit Dippan's GitHub">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z"/>
+            </svg>
+            GitHub
+          </a>
+          <a href="https://technicaldippan.blogspot.com" target="_blank" rel="noopener" aria-label="Visit Dippan's Blog">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M19 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 17H7v-2h5v2zm5-4H7v-2h10v2zm0-4H7V9h10v2z"/>
+            </svg>
+            Blog
+          </a>
+          <a href="mailto:dippanrajcompany@gmail.com" aria-label="Email Dippan">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+            </svg>
+            Email
+          </a>
+        </div>
+      </div>
+    </div>
+    <p class="copyright">© 2025 Dippan Bhusal. All rights reserved. | WeatherPro Dashboard</p>
+  </div>
+</footer>
     <script src="script.js"></script>
 </body>
 </html>
