Add author and SEO meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,29 @@
 <meta name="robots" content="index, follow" />
 <meta name="googlebot" content="index, follow, max-video-preview:-1, max-image-preview:large, max-snippet:-1" />
 <meta name="bingbot" content="index, follow" />
+<!-- Author Meta Tags -->
+<meta name="author" content="Dippan Bhusal">
+<meta name="creator" content="Dippan Bhusal">
+<meta name="publisher" content="Dippan Bhusal">
+<meta name="copyright" content="© 2024 Dippan Bhusal. All rights reserved.">
 
+<!-- Open Graph Tags for Social Sharing -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="WeatherPro Dashboard - Real-Time Weather & Forecast">
+<meta property="og:description" content="Real-time weather dashboard with accurate forecasts, air quality monitoring, and severe weather alerts. Built by Dippan Bhusal">
+<meta property="og:url" content="https://weatherpro-dashboard.netlify.app/">
+<meta property="og:site_name" content="WeatherPro Dashboard">
+<meta property="article:author" content="https://dippanbhusal.tech">
+
+<!-- Twitter Card Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="WeatherPro Dashboard - Real-Time Weather & Forecast">
+<meta name="twitter:description" content="Real-time weather dashboard by Dippan Bhusal with forecasts, air quality, and weather alerts">
+<meta name="twitter:creator" content="@dippanbhusal">
+
+<!-- Additional SEO Tags -->
+<link rel="author" href="https://dippanbhusal.tech">
+<link rel="me" href="https://github.com/kdippan">
 <!-- Canonical Tag -->
 <link rel="canonical" href="https://weatherpro-dashboard.netlify.app/" />
 
