--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <title>WeatherPro Dashboard - Real-Time Weather & Forecast | Dippan Bhusal</title>
 
 <!-- Meta Description -->
-<meta name="description" content="WeatherPro Dashboard delivers real-time weather, 3-day forecasts, air quality, and astronomy data worldwide. Stay prepared with live updates!" />
-
+<meta name="description" content="WeatherPro Dashboard - Real-time weather forecasts, air quality monitoring, and severe weather alerts. Built by Dippan Bhusal, Frontend Developer specializing in creative web applications.">
+<meta name="keywords" content="weather dashboard, real-time weather, weather forecast, air quality, Dippan Bhusal, weather app, weather API">
+<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+<link rel="canonical" href="https://weatherpro-dashboard.netlify.app/">
 <!-- Author and Contact -->
 <meta name="author" content="Dippan Bhusal" />
 <meta name="contact" content="dippan.connect@gmail.com" />
